[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Platform/CommonPlatform.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlatformThorns/PlatformThorns.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 4 )

[node name="CommonPlatform" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlatformThorns" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -5 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 1 )
shape = SubResource( 1 )
[connection signal="thorn_visibility" from="PlatformThorns" to="." method="_on_PlatformThorns_thorn_visibility"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
